vlib/v/checker/tests/match_return_mismatch_type_err.out
vlib/v/checker/tests/match_return_mismatch_type_err.vv:4:10: error: return type mismatch, it should be `string`
    2 |     a := match 1 {
    3 |         1 { 'aa' }
    4 |         else { 22 }
      |                ~~
    5 |     }
    6 |     println(a)
