vlib/v/checker/tests/match_return_mismatch_type_err.vv
fn main() {
	a := match 1 {
		1 { 'aa' }
		else { 22 }
	}
	println(a)
}
